<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#083C6A"
    tools:context=".CartActivity">

    <Button
        android:id="@+id/btBack2"
        android:layout_width="58dp"
        android:layout_height="59dp"
        android:layout_gravity="bottom|left"
        android:layout_marginStart="16dp"
        android:layout_marginTop="130dp"
        android:backgroundTint="#F6A90B"
        android:contentDescription="@string/left_button"
        android:onClick="btBackOnClick"
        android:rotation="180"
        app:icon="@android:drawable/ic_media_play"
        app:iconGravity="textEnd"
        app:iconSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="226dp"
        android:layout_height="208dp"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="111dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cobralogo1" />

    <ScrollView
        android:id="@+id/sclList"
        android:layout_width="426dp"
        android:layout_height="450dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="11dp"
        android:background="#F8F7F7"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <LinearLayout
            android:id="@+id/productsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="40dp" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="426dp"
        android:layout_height="300dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="4dp"
        android:background="#A9A7A7"
        android:gravity="center|top"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sclList">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/payment_method"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Total: "
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="150dp"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/btCredit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTint="#083C6A"
                    android:text="@string/credit_card"
                    android:textSize="18sp"
                    android:buttonTint="#083C6A"/>

                <RadioButton
                    android:id="@+id/btCash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cash_on_delivery"
                    android:textSize="18sp"
                    android:buttonTint="#083C6A"/>
            </RadioGroup>

            <Spinner
                android:id="@+id/spnPay"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:layout_gravity="center|top"
                android:layout_weight="1"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btConfirm"
            android:layout_width="133dp"
            android:layout_height="62dp"
            android:backgroundTint="#F6A90B"
            android:text="@string/confirm"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>